DDF-3: fixed script typo, added contributor info, added maven guidance